gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__arrow_fallback_short_cycle.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                              "
"                              "
"                              "
"                              "
"                              "
"                              "
"                              "
"   ╭─●─●─╮                    "
"   │     │                    "
"   ╰──◀──╯                    "
"                              "
"                              "
"                              "
"                              "
"                              "
