gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__arrow_forced_marker_short_edge_large_gap.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"     █████ █████                        "
"   ╭─█N0██─█N1██─╮                      "
"   │ █████ █████ │                      "
"   │             │                      "
"   ╰──────◀──────╯                      "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
