gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__asymmetric_diamond_4_1.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"          █████ █████ █████ █████                                               "
"        ╭─█N1██─█N2██─█N3██─█N4██─╮                                             "
"  █████ │ █████ █████ █████ █████ │ █████                                       "
"  █N0██─┤                         ├─█N5██                                       "
"  █████ │          █████          │ █████                                       "
"        ╰──────────█N6██──────────╯                                             "
"                   █████                                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
