gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__backward_edge_diamond_loop.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"            █████                                                                                                                   "
"          ╭─█N2██─╮                                                                                                                 "
"    █████ │ █████ │ █████                                                                                                           "
"  ╭─█N0██─┤       ├─█N3██─╮                                                                                                         "
"  │ █████ │ █████ │ █████ │                                                                                                         "
"  │       ╰─█N1██─╯       │                                                                                                         "
"  │         █████         │                                                                                                         "
"  ╰────◀─────────────◀────╯                                                                                                         "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
