gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__backward_edge_local_loop_multi_partition.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"     █████ █████ █████ █████ █████ █████ █████ █████                                                                                                                                                    "
"     █N0██─█N1██─█N2██─█N3██─█N4██─█N5██─█N6██─█N7██                                                                                                                                                    "
"     █████ █████ █████ █████ █████ █████ █████ █████                                                                                                                                                    "
"                                                                                                                                                                                                        "
"               ╰────▶───────────────▶────╯                                                                                                                                                              "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
"                                                                                                                                                                                                        "
